@@ -1,4 +1,6 @@
 RNG validity error: file ./test/relaxng/tutor3_7.rng line 1 element element
+Expecting an element , got nothing
+RNG validity error: file ./test/relaxng/tutor3_7.rng line 1 element element
 Invalid sequence in interleave
 RNG validity error: file ./test/relaxng/tutor3_7.rng line 1 element element
 Element element failed to validate content
